chore: adopt Thread.threadId() and Math.clamp where the bounds are constant
`Thread#getId()` is deprecated since JDK 19 and is implemented as
`return threadId()`, while `threadId()` is a final read of the same `tid` field.
The three call sites therefore keep identical values, and the compiled call site
differs only in the callee - the `l2i` cast and the stripe mask in
`CollationKeyCache` (a hot per-comparison path) are untouched. Nothing in the
reactor, nor Netty's `FastThreadLocalThread`, overrides the non-final `getId()`,
so the delegation holds on every thread the call sites run on.

`resolveHeartBeatDelay` clamps between two literal constants (1000L / 300000L),
which cannot reach the `min > max` case where `Math.clamp` throws but the nested
`Math.min(Math.max(...))` silently returned `max`. The `(JJJ)J` overload is
selected, so there is no narrowing and no boxing.

Every other clamp-shaped expression is left as it is: their bounds are not
statically ordered, and two of them - `ColumnSizing#trimmedLength` and
`TransactionalBitmap`'s delta buffer - are documented and test-pinned to rely on
the nested form's tolerance of an inverted range.

Ref: #1518